[package]
name = "rust_chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1.3", features = ["v4", "serde"] } 